--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.2",
     "react-window": "^1.8.11",
+    "sweetalert2": "^11.21.2",
     "tailwindcss": "^4.0.14",
     "wanakana": "^5.3.1"
   },
