--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.2",
+    "react-toastify": "^11.0.5",
     "react-window": "^1.8.11",
     "sweetalert2": "^11.21.2",
     "tailwindcss": "^4.0.14",
