--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@google/genai": "^1.3.0",
     "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
@@ -27,7 +28,7 @@
     "react-router-dom": "^7.5.2",
     "react-toastify": "^11.0.5",
     "react-window": "^1.8.11",
-    "sweetalert2": "^11.21.2",
+    "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.0.14",
     "wanakana": "^5.3.1"
   },
